fix: sidebar icon spacing

--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -292,7 +292,7 @@
 }
 
 .sidebar-context-menu-item-icon {
-  margin-left: 8px;
+  margin-left: 4px;
   flex: none;
 }
 
